--- a/E1T1/index.html
+++ b/E1T1/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <h1>E1T1: Team Name</h1>
-    <h2>Members: Member1, Member2</h2>
+    <h2>Members: Kreeya, Member2</h2>
     <hr/>
 
     <h3>Assignment 01: Mod the Sample Toy</h3>
-    <p><a href="A01-Modify the Sample Toy/member1/game.html">Member1's Mod</a></p>
+    <p><a href="A01-Modify the Sample Toy/member1/game.html">Kreeya's Mod</a></p>
 	<!-- Comment out the following line if you're a one-person team. -->
     <p><a href="A01-Modify the Sample Toy/member2/game.html">Member2's Mod</a></p>
 	
