--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kreeya's Web Site</title>
     <style>
         body { margin: 2em; font-family: sans-serif; }
-        h1 { color: green; }
+        h1 { color: blue; }
     </style>
 </head>
 <body>
